--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,3 +63,4 @@ jobs:
       with:
         artifacts: "dist/modpack_manager,dist/modpack_manager.exe"
         omitBody: true
+        allowUpdates: true
