--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         os: ['windows-latest', 'ubuntu-latest']
 
     env:
-      MAIN_PY_FILE: 'modpack_manager.py'  # Define the path to your main.py file here
+      MAIN_PY_FILE: 'main.py'  # Define the path to your main.py file here
 
     steps:
     - name: Checkout code
@@ -39,7 +39,7 @@ jobs:
 
     - name: Build executable
       run: |
-        pyinstaller ${{ env.MAIN_PY_FILE }}
+        pyinstaller --onefile --noconfirm --name "modpack_manager" ${{ env.MAIN_PY_FILE }}
       working-directory: ./
 
     - name: Create Artifact (Windows)
@@ -55,19 +55,3 @@ jobs:
       with:
         name: linux-executables
         path: dist/
-
-    - name: List files in dist folder
-      run: ls -R ./dist/
-
-    - uses: ncipollo/release-action@v1
-      if: matrix.os == 'ubuntu-latest'
-      with:
-        artifacts: "dist/modpack_manager"
-        omitBody: true
-        allowUpdates: true
-    - uses: ncipollo/release-action@v1
-      if: matrix.os == 'windows-latest'
-      with:
-        artifacts: "dist/modpack_manager.exe"
-        omitBody: true
-        allowUpdates: true
